# fastrace-tonic

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml  build.rs
example/src/: client.rs  server.rs
examples/: Cargo.toml
examples/proto/: ping.proto
examples/src/: client.rs  server.rs
src/: lib.rs
