[package]
edition = "2021"
license = "Apache-2.0"
name = "examples"
publish = false

[dependencies]
fastrace = { version = "0.7", features = ["enable"] }
fastrace-tonic = { path = ".." }
prost = "0.13"
tokio = { version = "1.44", features = ["full"] }
tonic = "0.12"
tower = "0.5"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
